[INJICERT-1145] rebasing develop with latest release changes (#395)
* Fix status list db scripts (#367)

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1120] Remove vc sign config dependency and fix vc request (#372)

* [INJICERT-1120] Move vcSignCryptoSuite from config to vc type table

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Change sdJwtVct to vct in credentialRequest

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Rename vcSignCryptoSuite to signatureCryptoSuite

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Update did.json with all verification methods

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

---------

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJCIERT-988] Update credential-provider doc link in the docker-compose readme

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1135] Add credetial status to vc type and set credentialStatus from code (#376)

* [INJICERT-1035] Add credetial status to vc type and set credentialStatus from code

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Add enum for credential status purpose

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>
Signed-off-by: Vishwa <visu.vs1@gmail.com>

* [INJICERT-1135] Add list type for credential status

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

---------

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* [INJICERT-1138] Add missing scripts for docker-compose setup (#374)

* Update docker compose init scripts

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Remove multiple vc types for farmer vc

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Add new usec case setup md file for docker-compose (#364)

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Fix script in new-usecase md file

Signed-off-by: Piyush7034 <piyushshukla2100@gmail.com>

* Update Postgres-plugin-usecase.md file

Signed-off-by: Piyush7034 <piyushshukla2100